# midas_open_parser

./: .buildinfo  .gitignore  LICENSE.txt  README.md  TODO.md  __init__.py  badc_csv.py  index.html  midas.py  objects.inv  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: documentation.yml  manual-version-bump.yml  release.yml
docs/source/: api.md  conf.py  contributing.md  index.md  installation.md  licence.md  usage.md
midas_open_parser/: __init__.py  badc_csv.py  midas.py  test.py
